Implement creator monetization section

--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -4,72 +4,110 @@
 
 .IndexPage {
   &__video-nfts-wrapper {
-    padding-top: 96px;
+    padding: 96px 0;
     background-color: #111316;
   }
 
   &__video-nfts {
-    @extend %container;
+    @include grid;
 
-    display: grid;
-    height: 413px;
-    gap: 32px;
-    grid-template-columns: 670px auto;
+    padding: 0 32px;
 
-    &__illustration {
-      position: relative;
-
-      &__foreground {
-        position: absolute;
-      }
-
-      &__popup {
-        position: absolute;
-      }
-    }
-
-    &__content {
+    &__header {
       display: flex;
+      align-items: center;
       flex-direction: column;
-      justify-content: center;
+      margin: 0 auto;
+      grid-column: 1 / 13;
 
       &__section-title {
-        @include section-title;
+        @include h400;
 
         color: #6c6cff;
       }
 
       &__title {
-        @include h3;
+        @include h900;
 
         margin-top: 4px;
         color: $c_white;
-      }
-
-      &__subtitle {
-        @include base-1;
-
-        margin-top: 16px;
-        color: #a7aeb7;
-        white-space: pre-line;
+        text-align: center;
       }
     }
-  }
 
-  &__video-nfts-carousel {
-    $carousel-gap: 24px;
+    &__subtitle {
+      @include t400;
 
-    margin-top: 64px;
+      margin-top: 16px;
+      color: #a7aeb7;
+      text-align: center;
+      grid-column: 3 / 11;
+    }
 
-    &__title-and-info {
-      @extend %container;
+    &__content-section {
+      display: grid;
+      min-height: 413px;
+      margin-top: 96px;
+      gap: 32px;
+      grid-column: 2 / 12;
+      grid-template-columns: 670px auto;
 
+      &__illustration {
+        position: relative;
+
+        &__foreground {
+          position: absolute;
+          // inset: 0;
+          // margin: auto;
+          width: 100%;
+        }
+
+        &__popup {
+          position: absolute;
+          // inset: 0;
+          // margin: auto;
+          width: 100%;
+        }
+      }
+
+      &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        &__section-title {
+          @include h400;
+
+          color: #6c6cff;
+        }
+
+        &__title {
+          @include h600;
+
+          margin-top: 4px;
+          color: $c_white;
+        }
+
+        &__subtitle {
+          @include t400;
+
+          margin-top: 16px;
+          color: #a7aeb7;
+          white-space: pre-line;
+        }
+      }
+    }
+
+    &__carousel-title-and-info {
       display: flex;
       justify-content: space-between;
+      margin-top: 72px;
+      grid-column: 2 / 12;
 
       &__title {
-        @include h6;
+        @include h500;
 
+        font-weight: 600px;
         color: $c_white;
       }
 
@@ -133,6 +171,10 @@
         }
       }
     }
+  }
+
+  &__video-nfts-carousel {
+    $carousel-gap: 24px;
 
     &__items-wrapper {
       display: flex;
@@ -239,106 +281,158 @@
     }
   }
 
-  @media #{$screen-max-lg} {
+  @media (max-width: 1440px) {
     &__video-nfts {
-      height: auto;
-      grid-template-columns: 500px auto;
-
-      &__illustration {
-        height: 290px;
-        margin: auto 0;
-
-        &__foreground {
-          top: 110px;
-        }
-
-        &__popup {
-          top: 110px;
-        }
-      }
-    }
-  }
-
-  @media #{$screen-max-md} {
-    &__video-nfts {
-      display: flex;
-      flex-direction: column;
-      height: auto;
-      max-width: 730px;
-
-      &__illustration {
-        height: auto;
-
-        &__foreground {
-          top: unset;
-          bottom: -82px;
-        }
-
-        &__popup {
-          top: unset;
-          bottom: -130px;
-        }
-      }
-    }
-  }
-
-  @media #{$screen-max-sm} {
-    &__video-nfts-wrapper {
-      padding-top: 64px;
-    }
-
-    &__video-nfts {
-      max-width: 534px;
-
-      &__illustration {
-        width: 534px;
-        height: 310px;
-        margin-left: 50%;
-        transform: translateX(-50%);
-
-        &__foreground {
-          top: unset;
-          bottom: -59px;
-        }
-
-        &__popup {
-          top: unset;
-          bottom: -95px;
-        }
-      }
-
-      &__content {
+      &__header {
         &__title {
-          @include h4;
+          @include h800;
+        }
+      }
+
+      &__subtitle {
+        grid-column: 1 / 13;
+      }
+
+      &__content-section {
+        grid-column: 1 / 13;
+        grid-template-columns: 550px auto;
+
+        &__illustration {
+          &__foreground {
+            top: 50px;
+          }
+
+          &__popup {
+            top: 50px;
+          }
+        }
+      }
+
+      &__carousel-title-and-info {
+        grid-column: 1 / 13;
+      }
+    }
+  }
+
+  @media (max-width: 1024px) {
+    &__video-nfts-wrapper {
+      padding: 64px 0;
+    }
+
+    &__video-nfts {
+      padding: 0 16px;
+
+      &__header {
+        &__title {
+          @include h700;
+        }
+      }
+
+      &__content-section {
+        display: flex;
+        flex-direction: column;
+        margin-top: 64px;
+        gap: 24px;
+
+        &__illustration {
+          margin: 0 auto;
+
+          &__foreground-wrapper,
+          &__popup-wrapper {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            margin: auto;
+            inset: 0;
+
+            & > div {
+              position: relative;
+              width: 100%;
+              height: 100%;
+              margin: auto;
+              -webkit-transform: none !important;
+              transform: none !important;
+              inset: 0;
+            }
+          }
+
+          &__foreground {
+            top: 0;
+          }
+
+          &__popup {
+            top: 0;
+          }
         }
 
-        &__subtitle {
-          @include base-3;
+        &__content {
+          &__title {
+            @include h500;
+          }
+        }
+      }
+
+      &__carousel-title-and-info {
+        &__title {
+          @include h400;
         }
       }
     }
   }
 
-  @media (max-width: 800px) {
-    &__video-nfts-carousel {
-      &__title-and-info {
+  @media (max-width: 768px) {
+    &__video-nfts {
+      &__header {
+        &__title {
+          @include h600;
+        }
+      }
+
+      &__subtitle {
+        @include t300;
+      }
+
+      &__content-section {
+        &__content {
+          &__subtitle {
+            @include t300;
+          }
+        }
+      }
+
+      &__carousel-title-and-info {
         flex-direction: column;
+        margin-top: 56px;
 
         &__info {
-          margin-top: 8px;
+          margin-top: 4px;
+        }
+      }
+    }
+  }
 
-          &__modal {
-            right: unset;
-            bottom: 20px;
-            left: 80px;
-            clip-path:
-              polygon(
-                0% 0%,
-                0% calc(100% - 6px),
-                100% calc(100% - 6px),
-                100% 0%
-              );
+  @media (max-width: 425px) {
+    &__video-nfts {
+      &__header {
+        &__title {
+          @include h500;
+        }
+      }
+
+      &__content-section {
+        &__content {
+          &__title {
+            @include h400;
           }
+        }
+      }
+
+      &__carousel-title-and-info {
+        flex-direction: column;
+        margin-top: 56px;
+
+        &__info {
+          margin-top: 4px;
         }
       }
     }
