--- a/src/components/index-page/Traction/style.scss
+++ b/src/components/index-page/Traction/style.scss
@@ -40,11 +40,10 @@
       grid-template-rows: repeat(2, 1fr);
     }
 
-    &__card {
+    &__card-wrapper {
       height: 416px;
-      padding: 32px;
-      background-color: rgba(188, 213, 250, .08);
-      border: 1px solid rgba(82, 97, 107, 1);
+      padding: 1px;
+      background: linear-gradient(180deg, #52616b 0%, rgba(82, 97, 107, 0) 100%);
       border-radius: 8px;
 
       &:nth-child(2) {
@@ -55,6 +54,14 @@
       &:nth-child(6) {
         margin-top: -64px;
       }
+    }
+
+    &__card {
+      width: 100%;
+      height: 100%;
+      padding: 32px;
+      background-color: get-color-from-opaque-and-background(rgb(188, 213, 250), .08, $c_black);
+      border-radius: 8px;
 
       &__visual {
         display: grid;
@@ -71,7 +78,7 @@
       }
 
       &:hover {
-        background-color: rgba(187, 217, 246, .13);
+        background-color: get-color-from-opaque-and-background(rgb(187, 217, 246), .13, $c_black);
       }
 
       &:hover &__change {
@@ -134,8 +141,11 @@
         grid-column: 1 / 13;
       }
 
-      &__card {
+      &__card-wrapper {
         height: 384px;
+      }
+
+      &__card {
         padding: 24px;
 
         &__value {
@@ -165,9 +175,7 @@
         grid-template-rows: repeat(3, 1fr);
       }
 
-      &__card {
-        height: 384px;
-
+      &__card-wrapper {
         &:nth-child(2) {
           margin-top: 64px;
         }
@@ -209,17 +217,20 @@
         margin-top: 48px;
       }
 
-      &__card {
+      &__card-wrapper {
         width: 100%;
         height: auto;
-        padding: 16px;
-        overflow: hidden;
 
         &:nth-child(2),
         &:nth-child(3),
         &:nth-child(5) {
           margin-top: 0;
         }
+      }
+
+      &__card {
+        padding: 16px;
+        overflow: hidden;
 
         &__change,
         &__info {
