--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -108,6 +108,7 @@ $offsetTopMobile: 200px;
   }
 
   &__timeline {
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -121,11 +122,17 @@ $offsetTopMobile: 200px;
 
   &__line {
     &__dotbottom {
+      position: absolute;
+      bottom: 0;
       width: 24px;
       height: 24px;
       min-height: 24px;
       background-color: $c_neutral-200;
       border-radius: 50%;
+
+      &--active {
+        background-color: #4038ff;
+      }
     }
 
     &__dot {
@@ -144,6 +151,7 @@ $offsetTopMobile: 200px;
       &--active {
         position: fixed;
         top: $offsetTop;
+        z-index: 2;
         width: 24px !important;
         background: #4038ff;
       }
@@ -153,7 +161,8 @@ $offsetTopMobile: 200px;
       }
 
       &--stick {
-        position: relative;
+        position: absolute;
+        top: 0;
         background: #4038ff;
       }
 
@@ -163,17 +172,19 @@ $offsetTopMobile: 200px;
     }
 
     &__line {
-      top: 1px;
-      left: 10px;
+      position: absolute;
+      right: 0;
+      left: 0;
       width: 4px;
-      height: -webkit-fill-available;
+      height: 100%;
+      margin: 0 auto;
       background-color: $c_neutral-200;
 
       &__bottom {
         top: 1px;
         left: 10px;
         width: 4px;
-        height: -webkit-fill-available;
+        height: 100%;
         margin-top: -28px;
         background-color: $c_neutral-200;
       }
