--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -111,11 +111,14 @@
     }
 
     &__apps {
-      margin-top: 96px;
+      margin-top: 120px;
+      grid-column: 2 / 12;
 
       &__title {
-        @include h6;
+        @include h500;
 
+        width: 1142px;
+        margin: 0 auto;
         color: $c_white;
 
         &__app-count {
@@ -132,14 +135,16 @@
 
       &__main {
         display: flex;
-        height: 540px;
-        margin-top: 32px;
-        padding: 48px 0 0 48px;
+        width: 1142px;
+        height: 592px;
+        margin: 32px auto 0 auto;
+        overflow: hidden;
         background-color: #111316;
-        gap: 54px;
+        border-radius: 8px;
 
         &__about {
-          max-width: 330px;
+          max-width: 326px;
+          padding: 48px;
 
           &__logo-wrapper {
             @include logo-wrapper(72px, 72px);
@@ -151,21 +156,21 @@
           }
 
           &__section-title {
-            @include section-title-md;
+            @include h100;
 
             margin-top: 64px;
             color: #6c6cff;
           }
 
           &__platform-name {
-            @include h5;
+            @include h600;
 
             margin-top: 8px;
             color: $c_white;
           }
 
           &__platform-description {
-            @include base-3;
+            @include t300;
 
             margin-top: 8px;
             color: #a7aeb7;
@@ -205,13 +210,17 @@
 
         &__visual {
           position: relative;
-          max-width: 720px;
+          padding: 48px;
+
+          &__image {
+            height: 100%;
+          }
 
           &__bottom-gradient {
             position: absolute;
             bottom: 0;
+            left: 0;
             width: 100%;
-            height: 100%;
             height: 136px;
             background: linear-gradient(180deg, rgba(17, 19, 22, 0) 0%, #111316 100%);
           }
@@ -219,18 +228,24 @@
       }
 
       &__carousel {
-        display: grid;
-        justify-content: space-between;
-        margin-top: 24px;
-        gap: 12px;
-        grid-template-columns: repeat(4, minmax(230px, 288px));
+        display: flex;
+        width: 1142px;
+        margin: 24px auto 0 auto;
+        overflow-x: auto;
+        gap: 24px;
+
+        &::-webkit-scrollbar {
+          height: 0;
+        }
 
         &__item {
           display: inline-block;
+          width: 284px;
           height: 288px;
-          max-width: 288px;
+          max-width: 284px;
           padding: 24px;
           background-color: #111316;
+          border-radius: 8px;
 
           &:hover {
             background-color: #1f252e;
@@ -249,34 +264,56 @@
           &__logo {
             width: 100%;
             height: 100%;
+            border-radius: 12px;
           }
 
           &__title {
-            @include h7;
+            @include h400;
 
             margin-top: 40px;
             color: $c_white;
           }
 
           &__content {
-            @include base-4;
+            @include t200;
 
             margin-top: 8px;
             color: #a7aeb7;
           }
 
           &__platforms-title {
-            @include section-title-md;
+            @include h100;
 
             margin-top: 16px;
             color: #dee3e9;
           }
 
           &__platforms {
-            @include base-4;
+            @include t200;
 
             margin-top: 8px;
             color: #a7aeb7;
+          }
+        }
+      }
+
+      &__carousel-controls {
+        display: flex;
+        justify-content: center;
+        margin-top: 40px;
+        gap: 8px;
+
+        &__item {
+          width: 32px;
+          height: 4px;
+          min-width: 32px;
+          min-height: 4px;
+          cursor: pointer;
+          background-color: #5c6475;
+
+          &--active {
+            cursor: auto;
+            background-color: #dee3e9;
           }
         }
       }
