--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -112,7 +112,7 @@
 
     &__apps {
       margin-top: 120px;
-      grid-column: 2 / 12;
+      grid-column: 1 / 13;
 
       &__title {
         @include h500;
@@ -195,7 +195,7 @@
             margin-top: 24px;
             font-family: $font-primary;
             font-size: 18px;
-            font-weight: 400;
+            font-weight: 600;
             line-height: 24px;
             letter-spacing: 0;
             color: #6c6cff;
@@ -320,12 +320,14 @@
 
       &__info {
         display: flex;
+        align-items: center;
         justify-content: center;
         margin: 32px auto 0 auto;
 
         &__text {
-          @include base-5;
+          @include t100;
 
+          font-weight: 500;
           color: #a7aeb7;
         }
 
@@ -339,44 +341,47 @@
     }
 
     &__developers {
+      max-width: 1142px;
+      margin: 0 auto;
       margin-top: 96px;
-      grid-column: 1 / 13;
+      grid-column: 2 / 12;
 
       &__main {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        gap: 24px;
+        grid-template-columns: 1fr 1fr;
 
         &__about {
-          max-width: 500px;
-
           &__section-title {
-            @include section-title;
+            @include h400;
 
             color: #6c6cff;
           }
 
           &__title {
-            @include h3;
+            @include h600;
 
             margin-top: 4px;
             color: $c_white;
           }
 
           &__subtitle {
-            @include base-1;
+            @include t400;
 
             margin-top: 16px;
             color: #a7aeb7;
           }
 
           &__link {
-            @include h8;
+            @include t300;
 
-            max-width: 250px;
+            max-width: 312px;
             margin-top: 32px;
-            padding: 18px;
+            padding: 20px 32px;
+            font-weight: 600;
             color: $c_white;
             background-color: $c_blue-ribbon;
+            border-radius: 8px;
 
             &:hover {
               background-color: $c_han_purple;
@@ -414,14 +419,20 @@
 
             & > code {
               margin-left: 20px;
-              font-family: $font-ibm-mono;
-              font-size: 16px;
-              font-weight: 500;
-              line-height: 24px;
-              letter-spacing: 0;
-              color: #a7aeb7;
+
+              &,
+              & > span {
+                font-family: $font-ibm-mono;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 24px;
+                letter-spacing: 0;
+                color: #a7aeb7;
+              }
             }
 
+            & > code:nth-last-child(1),
+            & > code:nth-last-child(2),
             & > code:nth-last-child(3) {
               font-style: italic;
               color: rgba(92, 100, 117, 1);
@@ -429,6 +440,12 @@
 
             &__broken-line {
               display: none;
+
+              &--newline {
+                &::before {
+                  content: '\a  ';
+                }
+              }
             }
           }
         }
@@ -436,14 +453,15 @@
 
       &__steps {
         display: flex;
-        justify-content: space-between;
-        margin-top: 64px;
+        justify-content: center;
+        margin-top: 72px;
+        gap: 24px;
 
-        &__item {
-          width: 284px;
-          height: 292px;
-          padding: 24px;
-          background-color: #111316;
+        &__item-wrapper {
+          max-height: 292px;
+          padding: 1px;
+          background: linear-gradient(180deg, #52616b 0%, rgba(82, 97, 107, 0) 100%);
+          border-radius: 8px;
 
           &:nth-child(2) {
             margin-top: 24px;
@@ -456,6 +474,14 @@
           &:nth-child(4) {
             margin-top: 72px;
           }
+        }
+
+        &__item {
+          width: 267.5px;
+          height: 292px;
+          padding: 24px;
+          background-color: #111316;
+          border-radius: 8px;
 
           &__number {
             font-family: $font-primary;
@@ -507,6 +533,85 @@
       &__browsers {
         grid-column: 1 / 13;
       }
+
+      &__apps {
+        &__title {
+          width: 960px;
+        }
+
+        &__main {
+          width: 960px;
+          height: 552px;
+
+          &__about {
+            max-width: 411px;
+          }
+
+          &__visual {
+            padding: 48px 0 0 48px;
+            overflow: hidden;
+
+            &__image {
+              min-width: 720px;
+            }
+          }
+        }
+
+        &__carousel {
+          width: 960px;
+        }
+      }
+
+      &__developers {
+        max-width: 960px;
+        grid-column: 1 / 13;
+
+        &__main {
+          overflow: hidden;
+          grid-template-columns: 468px 584px;
+
+          &__visual {
+            &__code {
+              &__full-line {
+                display: none;
+              }
+
+              &__broken-line {
+                display: inline;
+
+                &:nth-child(3),
+                &:nth-child(4) {
+                  display: inline;
+                }
+
+                &:nth-child(5) {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+
+        &__steps {
+          &__item-wrapper {
+            max-height: 316px;
+
+            &:nth-child(2),
+            &:nth-child(4) {
+              max-height: 292px;
+
+              & > div {
+                height: 292px;
+              }
+            }
+          }
+
+          &__item {
+            width: 222px;
+            height: 316px;
+          }
+        }
+      }
     }
   }
 
@@ -519,6 +624,107 @@
       &__header {
         &__title {
           @include h700;
+        }
+      }
+
+      &__apps {
+        margin-top: 86px;
+
+        &__title {
+          @include h400;
+
+          width: 100%;
+          max-width: 736px;
+        }
+
+        &__main {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          height: 832px;
+          max-width: 736px;
+
+          &__about {
+            max-width: 100%;
+            padding: 24px 16px;
+          }
+
+          &__visual {
+            padding: 28px 0 0 24px;
+
+            &__image {
+              height: 447px;
+              min-width: 688px;
+            }
+          }
+        }
+
+        &__carousel {
+          width: 100%;
+          max-width: 736px;
+        }
+      }
+
+      &__developers {
+        width: 100%;
+        max-width: 736px;
+
+        &__main {
+          display: flex;
+          flex-direction: column;
+          gap: 56px;
+
+          &__visual {
+            width: 100%;
+            height: 320px;
+
+            &__code {
+              &__full-line {
+                display: inline;
+              }
+
+              &__broken-line {
+                display: none;
+
+                &:nth-child(3),
+                &:nth-child(4) {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+
+        &__steps {
+          justify-content: unset;
+          margin-top: 0;
+          padding: 0 0 2px 0;
+          overflow-x: auto;
+          gap: 16px;
+
+          &::-webkit-scrollbar {
+            height: 0;
+          }
+
+          &__item-wrapper {
+            max-height: 292px;
+            padding: 2px;
+
+            &:nth-child(2),
+            &:nth-child(3),
+            &:nth-child(4) {
+              margin-top: 0;
+            }
+          }
+
+          &__item {
+            width: 283px;
+            height: 292px;
+
+            &__number {
+              line-height: 80px;
+            }
+          }
         }
       }
     }
@@ -561,6 +767,76 @@
           }
         }
       }
+
+      &__apps {
+        margin-top: 64px;
+
+        &__main {
+          height: 864px;
+
+          &__visual {
+            &__image {
+              height: 447px;
+              min-width: 647px;
+            }
+          }
+        }
+      }
+
+      &__developers {
+        margin-top: 64px;
+
+        &__main {
+          &__about {
+            &__title {
+              @include h500;
+            }
+
+            &__subtitle {
+              @include t300;
+            }
+
+            &__link {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 100%;
+              max-width: 393px;
+              padding: 20px 10px;
+              font-weight: 600;
+
+              &__icon {
+                margin-bottom: 0;
+              }
+            }
+          }
+
+          &__visual {
+            &__code {
+              &__full-line {
+                display: none;
+              }
+
+              &__broken-line {
+                display: inline;
+
+                &:nth-child(5) {
+                  display: none;
+                }
+
+                &:nth-child(3),
+                &:nth-child(4) {
+                  display: inline;
+                }
+              }
+            }
+          }
+        }
+
+        &__steps {
+          margin-top: 48px;
+        }
+      }
     }
   }
 
@@ -572,6 +848,65 @@
 
           & > br {
             display: none;
+          }
+        }
+      }
+
+      &__apps {
+        &__title {
+          display: flex;
+          align-items: center;
+
+          &__app-count {
+            display: grid;
+            width: 32px;
+            height: 28px;
+            min-width: 32px;
+            min-height: 28px;
+            place-items: center;
+          }
+        }
+
+        &__main {
+          height: 796px;
+
+          &__about {
+            &__platform-name {
+              @include h500;
+            }
+
+            &__link {
+              @include t300;
+
+              font-weight: 600;
+            }
+          }
+
+          &__visual {
+            &__image {
+              height: 260px;
+              min-width: 387px;
+            }
+          }
+        }
+      }
+
+      &__developers {
+        &__main {
+          &__visual {
+            &__code {
+              &__broken-line {
+                &:nth-child(4) {
+                  & > span {
+                    display: none;
+                  }
+                }
+
+                &:nth-child(5) {
+                  display: inline;
+                }
+              }
+            }
           }
         }
       }
