Fix hero wrapper padding

--- a/src/components/index-page/Hero/style.scss
+++ b/src/components/index-page/Hero/style.scss
@@ -218,6 +218,10 @@ $animation-name: null;
       padding: 16px;
     }
 
+    &__hero-wrapper {
+      padding: 16px 16px 64px 16px;
+    }
+
     &__hero {
       column-gap: 16px;
 
